deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-watcher2
  namespace: default
  labels:
    app: alert-watcher2
spec:
  selector:
    app: alert-watcher2
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
